<resources>
    <string name="app_name">Bidding-System</string>
    <string name="profile">Profile</string>
    <string name="login_title_text">Login</string>
    <string name="signup_title_text">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="nav_header_title">Advance MAD</string>
    <string name="nav_header_subtitle">AdvMobileAppDev@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">Logout</string>
    <string name="reEnter_password_hint">Re-enter Password</string>
    <string name="current_balance_label">Balance</string>
    <string name="add_money_button_text">Add Money</string>
    <string name="balance_initial">$0.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_bids_title">Current Bids</string>
    <string name="owner_label_text">Owner</string>
    <string name="starting_bid_label_text">Starting Bid</string>
    <string name="min_final_bid_label_text">Min Final Bid</string>
    <string name="item_name_hint">Item Name</string>
    <string name="starting_bid_hint">Starting Bid</string>
    <string name="min_final_bid_hint">Minimum Final Bid</string>
    <string name="post_item_button_text">Post Item</string>
    <string name="current_winning_bid_label_text">Current Winning Bid</string>
    <string name="make_bid_hint">Your Bid</string>
    <string name="make_bid_button_text">Make Bid</string>
    <string name="cancel_bid_button_text">Cancel Bid</string>
    <string name="accept_bid_button_text">Accept Bid</string>
    <string name="price_label_text">Price</string>
    <string name="seller_label_text">Seller</string>
    <string name="date_label_text">Date</string>
    <string name="transaction_history_title_text">Transaction History</string>
    <string name="item_label_text">Item</string>
    <string name="current_bid_label_text">Current Bid</string>
</resources>