<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_current_bids"
            android:title="@string/current_bids_title" />
        <item
            android:id="@+id/nav_post_item"
            android:title="@string/post_item_button_text" />
        <item
            android:id="@+id/nav_transaction_history"
            android:title="@string/transaction_history_title_text" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>
</menu>