<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProfileFragment">

    <TextView
        android:id="@+id/view_profile_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/viewProfile_addMoneyButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="52dp"
        android:text="@string/add_money_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toEndOf="@+id/viewProfile_addMoneyEdit"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_profile_textview">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/first_name_hint"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewProfile_firstNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/first_name_hint"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/first_name_hint"
            android:singleLine="false"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/last_name_hint"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewProfile_lastNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/last_name_hint"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/last_name_hint"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="54dp"
            android:layout_height="29dp"
            android:layout_marginRight="16dp"
            android:text="@string/email_hint"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewProfile_emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_hint"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/email_hint"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="76dp"
            android:layout_height="23dp"
            android:layout_marginRight="8dp"
            android:text="@string/current_balance_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewProfile_currentBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:text="@string/balance_initial"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/viewProfile_addMoneyEdit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/balance_initial"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


</androidx.constraintlayout.widget.ConstraintLayout>